--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,6 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
-  }
+  },
+  "include": [".eslintrc.cjs", "commitlint.config.ts", "**/*.ts"]
 }
