--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "tsconfig.json",
   "exclude": ["node_modules", "test", "dist", "**/*spec.ts"],
   "include": [".eslintrc.cjs", "commitlint.config.ts", "**/*.ts"]
 }
