--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "gradient-string": "^2.0.2",
     "husky": "^9.0.11",
     "jest": "^29.5.0",
+    "lint-staged": "^15.2.2",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
@@ -71,5 +72,11 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "lint-staged": {
+    "*.{ts,js,md,json}": [
+      "prettier -w",
+      "eslint --fix"
+    ]
   }
 }
