--- a/package.json
+++ b/package.json
@@ -41,7 +41,12 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-nestjs": "^1.2.3",
     "eslint-plugin-prettier": "^5.0.0",
     "gradient-string": "^2.0.2",
     "husky": "^9.0.11",
