--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,14 @@
 {
+  "semi": true,
+  "trailingComma": "es5",
   "singleQuote": true,
-  "trailingComma": "all"
+  "endOfLine": "lf",
+  "importOrder": [
+    "<THIRD_PARTY_MODULES>"
+],
+  "importOrderSeparation": true,
+  "importOrderCaseInsensitive": true,
+  "importOrderParserPlugins": ["typescript", "decorators-legacy"],
+  "importOrderSortSpecifiers": true,
+  "plugins": ["@trivago/prettier-plugin-sort-imports"]
 }
