--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nestfirstapp",
+  "name": "template-nestjs",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Ignacio Bockl",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -14,6 +14,8 @@
     "start:prod": "node dist/main",
     "lint": "npx tsx ./config/pre-build.ts --ignore-build",
     "prepare": "husky",
+    "prettier:check": "npx prettier -c .",
+    "prettier:write": "npx prettier -w .",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -33,6 +35,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/express": "^4.17.17",
     "@types/gradient-string": "^1.1.5",
     "@types/jest": "^29.5.2",
