--- a/.prettierrc
+++ b/.prettierrc
@@ -3,9 +3,7 @@
   "trailingComma": "es5",
   "singleQuote": true,
   "endOfLine": "lf",
-  "importOrder": [
-    "<THIRD_PARTY_MODULES>"
-],
+  "importOrder": ["<THIRD_PARTY_MODULES>"],
   "importOrderSeparation": true,
   "importOrderCaseInsensitive": true,
   "importOrderParserPlugins": ["typescript", "decorators-legacy"],
